# rust-scripts

./: Cargo.toml  material_map.json
composite/: Cargo.toml
composite/src/: config.rs  light.rs  main.rs  mask.rs
depth/: Cargo.toml
depth/src/: main.rs
foreground/: Cargo.toml
foreground/src/: main.rs  new.rs  old.rs
foreground/tmp/: 0121.exr  main.rs
lut/: Cargo.toml
lut/src/: lib.rs
matte/: Cargo.toml
matte/src/: main.rs
metal/: Cargo.toml
metal/src/: main.rs
process-exr/: Cargo.toml
process-exr/src/: main.rs
test/: Cargo.toml
test/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs
zrank/: Cargo.toml
zrank/src/: main.rs
