[package]
name = "composite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
arrayfire = "3.8"
clap = { version = "3.1.18", features = ["derive"] }
exr = "1.4.2"
hmap = "0.1.0"
image = "0.24.2"
itertools = "0.10.5"
webp = "0.2.2"