[package]
name = "process-exr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
exr = "1.4.2"
image = "0.24.2"
rayon = "1.5.3"
serde_json = "1.0.81"
webp = "0.2.2"
